fix images collapsing by resizing them with imagesloaded

--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,6 @@ form {
   margin-top: 20px;
 }
 
-/* .picture {
-    width: auto;
-    height: 200px;
-    float: left;
-    margin: 10px;
-} */
 
 .grid {
   display: grid;
